--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://satya1105.github.io/validateJson/",
   "name": "jsonvalidator",
   "version": "0.1.0",
   "private": true,
