--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "diff": "^5.2.0",
+    "gh-pages": "^6.1.1",
     "mammoth": "^1.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
